[package]
name = "game_boy_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
winit = "0.26.1"
winit_input_helper = "0.12.0"
pixels = "0.9.0"
dotenvy = "0.15.1"
cpal = "0.12"
dasp = { version = "0.11", features = ["all"] }